tests/ui/imports/absolute-paths-in-nested-use-groups.stderr
error[E0433]: failed to resolve: crate root in paths can only be used in start position
  --> $DIR/absolute-paths-in-nested-use-groups.rs:6:5
   |
LL |     ::bar,
   |     ^ crate root in paths can only be used in start position

error[E0433]: failed to resolve: `super` in paths can only be used in start position
  --> $DIR/absolute-paths-in-nested-use-groups.rs:7:5
   |
LL |     super::bar,
   |     ^^^^^ `super` in paths can only be used in start position

error[E0433]: failed to resolve: `self` in paths can only be used in start position
  --> $DIR/absolute-paths-in-nested-use-groups.rs:8:5
   |
LL |     self::bar,
   |     ^^^^ `self` in paths can only be used in start position

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0433`.
